--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,31 +10,17 @@ services:
       - "80:80"
     volumes:
       - type: bind
-        source: ./sites.conf
-        target: /etc/nginx/conf.d/default.conf
+        source: ./etc/nginx/conf.d
+        target: /etc/nginx/conf.d
       - type: bind
         source: ./homestead
         target: /var/www/html
     depends_on:
-      - dnsmasq
       - php70
       - php71
       - php74
       - php81
       - php83
-
-  dnsmasq:
-    container_name: dns
-    build:
-      context: .
-      dockerfile: ./docker/dns/Dockerfile
-    volumes:
-      - type: bind
-        source: ./docker/dns/dnsmasq.conf
-        target: /etc/dnsmasq.conf
-        read_only: true
-    ports:
-      - "5353:53/udp"
 
   php70:
     build:
