--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: "3.9"
 services:
   nginx:
     image: nginx:latest
-    container_name: nginx
+    container_name: ${APP_PREFIX:-app_}nginx
     networks:
       - app_network
     ports:
-      - "80:80"
+      - "${NGINX_PORT:-80}:80"
     volumes:
       - type: bind
         source: ./etc/nginx/conf.d
@@ -26,7 +26,7 @@ services:
     build:
       context: ./docker/php/70
       dockerfile: Dockerfile
-    container_name: php70
+    container_name: ${APP_PREFIX:-app_}php70
     networks:
       - app_network
     volumes:
@@ -37,7 +37,7 @@ services:
     build:
       context: ./docker/php/71
       dockerfile: Dockerfile
-    container_name: php71
+    container_name: ${APP_PREFIX:-app_}php71
     networks:
       - app_network
     volumes:
@@ -49,29 +49,31 @@ services:
     build:
       context: ./docker/php/74
       dockerfile: Dockerfile
-    container_name: php74
+    container_name: ${APP_PREFIX:-app_}php74
     networks:
       - app_network
     volumes:
       - type: bind
         source: ./homestead
         target: /var/www/html
+
   php81:
     build:
       context: ./docker/php/81
       dockerfile: Dockerfile
-    container_name: php81
+    container_name: ${APP_PREFIX:-app_}php81
     networks:
       - app_network
     volumes:
       - type: bind
         source: ./homestead
         target: /var/www/html
+
   php83:
     build:
       context: ./docker/php/83
       dockerfile: Dockerfile
-    container_name: php83
+    container_name: ${APP_PREFIX:-app_}php83
     networks:
       - app_network
     volumes:
@@ -81,16 +83,16 @@ services:
 
   mysql:
     image: mysql:5.7
-    container_name: mysql
+    container_name: ${APP_PREFIX:-app_}mysql
     environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: homestead
-      MYSQL_USER: homestead
-      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-secret}
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-homestead}
+      MYSQL_USER: ${MYSQL_USER:-homestead}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-secret}
     networks:
       - app_network
     ports:
-      - "3306:3306"
+      - "${MYSQL_PORT:-3306}:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - type: bind
@@ -101,14 +103,25 @@ services:
 
   mongodb:
     image: mongo:4.4
-    container_name: mongodb
+    container_name: ${APP_PREFIX:-app_}mongodb
     ports:
-      - "27017:27017"
+      - "${MONGODB_PORT:-27017}:27017"
     networks:
       - app_network
     volumes:
       - mongodb_data:/data/db
-    
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: ${APP_PREFIX:-app_}rabbitmq
+    networks:
+      - app_network
+    ports:
+      - "${RABBITMQ_CLIENT_PORT:-5672}:5672"
+      - "${RABBITMQ_MANAGEMENT_PORT:-15672}:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER:-guest}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS:-guest}    
 
 networks:
   app_network:
