--- a/docker/php/70/Dockerfile
+++ b/docker/php/70/Dockerfile
@@ -9,12 +9,14 @@ RUN apt-get update && apt-get install -y \
     libcurl4-openssl-dev \
     pkg-config \
     libssl-dev \
+    libicu-dev \
     unzip \
     zip \
     zlib1g-dev \
     && pecl install mongodb-1.5.5 \
     && docker-php-ext-enable mongodb \
     && docker-php-ext-install zip \
+    && docker-php-ext-install intl \
     && docker-php-ext-install pdo pdo_mysql
 
 # Установка и включение Redis (совместимой версии с PHP 7.0)
