--- a/docker/php/81/Dockerfile
+++ b/docker/php/81/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update && apt-get install -y \
     libcurl4-openssl-dev \
     pkg-config \
     libssl-dev \
+    libicu-dev \
     unzip \
     zip \
     zlib1g-dev \
@@ -14,7 +15,7 @@ RUN apt-get update && apt-get install -y \
 RUN pecl install mongodb \
     && docker-php-ext-enable mongodb
 
-RUN docker-php-ext-install zip pdo pdo_mysql
+RUN docker-php-ext-install zip pdo pdo_mysql intl
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
